[package]
name = "worms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.20.1"
egui = "0.20.1"
rand = "0.8.5"
radians = "0.3.0"
lazy_static = "1.4.0"
rayon = "1.5.3"
serde_json = "1.0.85"

[profile.release]
opt = 3
panic = "abort"
lto = true

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "execute"
harness = false
